serve-api package

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,6 +8,7 @@
     "@snappy/config": "workspace:*",
     "@snappy/core": "workspace:*",
     "@snappy/db": "workspace:*",
+    "@snappy/server-api": "workspace:*",
     "@snappy/snappy": "workspace:*",
     "@snappy/snappy-site": "workspace:*",
     "@snappy/yoo-kassa": "workspace:*",
