--- a/packages/do/package.json
+++ b/packages/do/package.json
@@ -11,7 +11,7 @@
     "./config/js": "./src/config/index.esm.js"
   },
   "scripts": {
-    "start": "bun run src/main.server.ts"
+    "start": "node --import tsx/esm src/main.server.ts"
   },
   "dependencies": {
     "@cspell/dict-ru_ru": "^2.3.2",
@@ -46,6 +46,7 @@
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.55.0",
+    "vitest": "^3.2.4",
     "zod": "^4.3.6"
   }
 }
