--- a/packages/snappy-site/package.json
+++ b/packages/snappy-site/package.json
@@ -10,7 +10,7 @@
     "build": "vite build",
     "build:client": "vite build",
     "build:ssr": "vite build --ssr src/site/entry-server.tsx --outDir dist/server",
-    "dev": "bun run server.ts"
+    "dev": "node --import tsx/esm server.ts"
   },
   "dependencies": {
     "@fontsource-variable/inter": "^5.2.8",
