--- a/packages/do/package.json
+++ b/packages/do/package.json
@@ -17,6 +17,7 @@
     "@cspell/dict-ru_ru": "^2.3.2",
     "@eslint/js": "^9.39.2",
     "@modelcontextprotocol/sdk": "^1.26.0",
+    "@snappy/node": "workspace:*",
     "@stylistic/eslint-plugin": "^5.8.0",
     "@types/bun": "^1.3.9",
     "@types/node": "^25.2.3",
