--- a/packages/snappy-site/package.json
+++ b/packages/snappy-site/package.json
@@ -29,6 +29,7 @@
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "express": "^5.2.1",
+    "tsx": "^4.21.0",
     "vite": "8.0.0-beta.13",
     "vite-plugin-typed-css-modules": "^0.5.3"
   }
