--- a/packages/snappy-bot/package.json
+++ b/packages/snappy-bot/package.json
@@ -1,1 +1,13 @@
-{"name":"@snappy/snappy-bot","version":"0.0.0","type":"module","private":true,"main":"./src/index.ts","dependencies":{"@snappy/core":"workspace:*","@snappy/server-api":"workspace:*","@snappy/snappy":"workspace:*","gramio":"^0.4.13"}}
+{
+  "name": "@snappy/snappy-bot",
+  "version": "0.0.0",
+  "type": "module",
+  "private": true,
+  "main": "./src/index.ts",
+  "dependencies": {
+    "@snappy/core": "workspace:*",
+    "@snappy/server-api": "workspace:*",
+    "@snappy/snappy": "workspace:*",
+    "gramio": "^0.4.13"
+  }
+}
