--- a/packages/do/package.json
+++ b/packages/do/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-unused-imports": "^4.4.1",
     "globals": "^17.2.0",
     "jscpd": "^4.0.5",
+    "knip": "^5.83.0",
     "markdownlint-cli": "^0.47.0",
     "open": "^11.0.0",
     "prettier": "^3.2.4",
