--- a/packages/server-prod/package.json
+++ b/packages/server-prod/package.json
@@ -11,11 +11,9 @@
     "@snappy/server": "workspace:*",
     "@snappy/snappy": "workspace:*",
     "@snappy/snappy-bot": "workspace:*",
-    "@snappy/yoo-kassa": "workspace:*",
-    "express": "^5.2.1"
+    "@snappy/yoo-kassa": "workspace:*"
   },
   "devDependencies": {
-    "@types/express": "^5.0.6",
     "tsx": "^4.21.0",
     "vite": "8.0.0-beta.13"
   }
