--- a/packages/snappy-site/package.json
+++ b/packages/snappy-site/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "exports": {
-    "./ssr": "./src/Ssr.ts"
+    ".": "./src/index.ts"
   },
   "scripts": {
     "build": "vite build",
