--- a/packages/snappy-site/package.json
+++ b/packages/snappy-site/package.json
@@ -14,10 +14,10 @@
   },
   "dependencies": {
     "@fontsource-variable/inter": "^5.2.8",
+    "@snappy/browser": "workspace:*",
     "@snappy/core": "workspace:*",
     "@snappy/server-api": "workspace:*",
     "@snappy/ui": "workspace:*",
-    "isomorphic-dompurify": "^3.0.0-rc.2",
     "js-beautify": "^1.15.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
