--- a/packages/snappy-site/package.json
+++ b/packages/snappy-site/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "private": true,
   "exports": {
-    ".": "./src/index.ts"
+    ".": "./src/index.ts",
+    "./Ssr": "./src/Ssr.ts"
   },
   "scripts": {
     "build": "vite build",
