--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,21 +5,13 @@
   "private": true,
   "main": "./src/index.ts",
   "dependencies": {
-    "@snappy/config": "workspace:*",
     "@snappy/core": "workspace:*",
-    "@snappy/db": "workspace:*",
     "@snappy/server-api": "workspace:*",
-    "@snappy/snappy": "workspace:*",
-    "@snappy/snappy-bot": "workspace:*",
+    "@snappy/server-app": "workspace:*",
     "@snappy/snappy-site": "workspace:*",
-    "@snappy/yoo-kassa": "workspace:*",
-    "bcryptjs": "^2.4.3",
-    "express": "^5.2.1",
-    "jsonwebtoken": "^9.0.2"
+    "express": "^5.2.1"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/express": "^5.0.6",
-    "@types/jsonwebtoken": "^9.0.7"
+    "@types/express": "^5.0.6"
   }
 }
