--- a/packages/server-prod/package.json
+++ b/packages/server-prod/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "@snappy/config": "workspace:*",
     "@snappy/core": "workspace:*",
-    "@snappy/server": "workspace:*"
+    "@snappy/server": "workspace:*",
+    "@snappy/server-app": "workspace:*"
   },
   "devDependencies": {
     "tsx": "^4.21.0",
