--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,7 @@ DB_PORT=5432
 BOT_TOKEN=your_bot_token_here
 GIGACHAT_AUTH_KEY=your_gigachat_key_here
 
-# API (server + cabinet auth)
-API_PORT=3000
-API_BASE_URL=http://localhost:3000
+# API + cabinet auth
 BOT_API_KEY=your_bot_api_key_here
 JWT_SECRET=your_jwt_secret_min_32_chars_for_dev
 
