--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,6 +12,7 @@
     "express": "^5.2.1"
   },
   "devDependencies": {
-    "@types/express": "^5.0.6"
+    "@types/express": "^5.0.6",
+    "vitest": "^3.2.4"
   }
 }
