--- a/packages/snappy-site/package.json
+++ b/packages/snappy-site/package.json
@@ -18,6 +18,7 @@
     "@snappy/browser": "workspace:*",
     "@snappy/core": "workspace:*",
     "@snappy/server-api": "workspace:*",
+    "@snappy/store": "workspace:*",
     "@snappy/ui": "workspace:*",
     "js-beautify": "^1.15.4",
     "react": "^19.0.0",
