--- a/.github/actions/build-and-release/action.yml
+++ b/.github/actions/build-and-release/action.yml
@@ -23,9 +23,11 @@ runs:
         bun install --frozen-lockfile
         bun run packages/do/src/main.cli.ts build
 
-    - name: 📦 Zip artifact
+    - name: 📦 Prune to production deps and zip artifact
       shell: bash
-      run: zip -r dist.zip dist
+      run: |
+        bun install --production --frozen-lockfile
+        zip -r dist.zip dist package.json bun.lock node_modules
 
     - name: 📤 Create Release and upload artifact
       id: release
