--- a/packages/do/package.json
+++ b/packages/do/package.json
@@ -17,6 +17,7 @@
     "@cspell/dict-ru_ru": "^2.3.2",
     "@eslint/js": "^9.39.2",
     "@modelcontextprotocol/sdk": "^1.27.1",
+    "@snappy/core": "workspace:*",
     "@snappy/node": "workspace:*",
     "@stylistic/eslint-plugin": "^5.9.0",
     "@types/bun": "^1.3.9",
@@ -53,5 +54,9 @@
     "typescript-eslint": "^8.56.1",
     "vitest": "^4.0.18",
     "zod": "^4.3.6"
+  },
+  "devDependencies": {
+    "vite": "8.0.0-beta.13",
+    "vite-plugin-typed-css-modules": "^0.5.3"
   }
 }
