--- a/packages/snappy-site/package.json
+++ b/packages/snappy-site/package.json
@@ -18,12 +18,12 @@
     "react-router-dom": "^7.13.1"
   },
   "devDependencies": {
+    "@snappy/do": "workspace:*",
     "@types/express": "^5.0.6",
     "@types/react": "^19.2.14",
     "@types/react-dom": "^19.0.0",
     "express": "^5.2.1",
     "tsx": "^4.21.0",
-    "vite": "8.0.0-beta.13",
-    "vite-plugin-typed-css-modules": "^0.5.3"
+    "vite": "8.0.0-beta.13"
   }
 }
