--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,4 +43,4 @@ jobs:
         run: bun install --frozen-lockfile
 
       - name: ▶️ Run ${{ matrix.task.name }}
-        run: bun run packages/do/src/main.cli.ts ${{ matrix.task.arg }}
+        run: bun do ${{ matrix.task.arg }}
